# election-app-backend

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.Docker.md  README.md  compose.yaml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/common/middlewares/: logger.py
app/common/utils/: logger.py
app/core/: config.py  db.py  security.py
